# HackerRank-Solution

./: .gitignore  README.md  test.c  test.cpp
DataStructure/: CMakeLists.txt
DataStructure/Arrays/: 1-arrays-ds.cpp  2-2d-array.cpp  3-dynamic-array.cpp  3-dynamic-array.php  4-sparse-arrays.php  a.out
DataStructure/LinkedLists/: 1-print-the-elements-of-a-linked-list.cpp  2-insert-a-node-at-the-tail-of-a-linked-list.cpp  3-insert-a-node-at-the-head-of-a-linked-list.cpp  4-insert-a-node-at-a-specific-position-in-a-linked-list.cpp  5-delete-a-node-from-a-linked-list.cpp  6-print-the-elements-of-a-linked-list-in-reverse.cpp  7-reverse-a-linked-list.cpp  8-compare-two-linked-lists.cpp  9-merge-two-sorted-linked-lists.cpp  a.out
Euler/: euler001.php  euler004.php  euler006.cpp  euler012.cpp  euler013.php  euler014.cpp  euler014.php  euler015.php  euler016.php
Implementation/: 1-angry-professor.php  12-library-fine.cpp  12-library-fine.php  12-manasa-and-stones.php  14-extra-long-factorials.c  15-taum-and-bday.php  17-kaprekar-numbers.php  18-encryption.cpp  2-sherlock-and-the-beast.php  3-utopian-tree.php  5-sherlock-and-squares.php  6-service-lane.php  7-cut-the-sticks.cpp  8-chocolate-feast.php  9-caesar-cipher-1.c  a.out
Linux-Shell/: awk-1.sh  awk-2.sh  awk-4.sh  bash-tutorials-concatenate-an-array-with-itself.sh  bash-tutorials-count-the-number-of-elements-in-an-array.sh  bash-tutorials-display-the-third-element-of-an-array.sh  bash-tutorials-filter-an-array-with-patterns.sh  bash-tutorials-read-in-an-array.sh  bash-tutorials-slice-an-array.sh  cut-1.sh  cut-2.sh  (+31 more)
(+341 files in other folders)
